--- a/main.css
+++ b/main.css
@@ -116,5 +116,18 @@ main > article > .article-nav-section {
 }
 
 .article-description-section > p {
-  padding: 10px;
+  padding: 0px 20px;
+  text-align: justify;
+}
+
+.article-title-section > h1 {
+  font-size: 4rem;
+  padding-left: 50px;
+}
+
+article[data-index="2"] > div.article-image-section {
+  background-image: url(oiNx3SB4uQVtn0u8OA1T--2--8rnca-removebg-preview.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 55%;
 }
